--- a/Application/Code/DBMS_G15/DBMS_G15/StaffForm.resx
+++ b/Application/Code/DBMS_G15/DBMS_G15/StaffForm.resx
@@ -118,7 +118,41 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnAddProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAlBJREFUeF7t
+        m11qwkAUhX3uakqhXUAlBiHBSFfkg4L64KpsK7Wty6hQbaVCH+1cmfMSDCbze8fOBxeKksk5X0ejEFuR
+        SCTShGWeX8k/2WE929P9/c0iSb5e0rQnH2IDZaJslFE+ZJZ5klwvs+xjOxgcVv3+RpzwQT7lnUWnk62K
+        YkPZXvN8/Zimd/IpM6D8bjg8/M5mh/10ykYCyu8nk2O23WhkVkK5PIaDhHJ5jDEJVeUxPiVUlcdoSzhX
+        HuNDwrnyGGUJdctjXEqoWx7TWAJdS5+T5JveUU8tWDU/ItB7UXwKCdYukbQ2nYPOdSpD1VAX6lT7c0JT
+        yxibO8F5Jk4SvGXhIMF7Bp0A4vW61QnAZhf6kMCmPHApgV154EIC2/LApgT25YENCcGUByYlBFcemJAQ
+        bHkgAih9Psd3B51j6dwyhl90JCiV7/W2y263kKfngepWbjJstn0VNiWwLw9sSAimPDApIbjywISEYMsD
+        HQnBlydEeKXLIw3by11dTL0EhMBa3yJZYfpNMCgJJstjgpFgozyGvQSb5TFsJYhAzr4M7cdjXlcHnfJ0
+        nMqxRwniODq3jOEH1W1PWxkfcnTWEBL8vRxMlJdLaa3lRYLJ8sDGmlawGZS9BBcB2UpwGYydBB+B2Ejw
+        GcS7BA7/BW8Z2GxBgfMsnMoDZ5nibXKCS7tR8i3L1vN2+1YuUY9LuVVWqTwI/WZprfKgSoLP8qBKAu4P
+        1i4PyhI4lAdlCcbLA0igd1Qu5QEkUDYr5cG//tEUsP7TNA04Z4tEIhxptf4AJEYR/dOqmE8AAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="btnSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAsxJREFUeF7t
+        2+1PUnEUwHH/gPo3y61iWXK9wJguSwdIBg4njwLZUgQd5IzKoUlhC9SssZXpux7cWq2HaVutnTi/IcN7
+        LwrcH5cLO2f7vmN4zgdw4wU9NDQ0lXEYI3cdQqRQT3Zj5KNdiBxKuzUQ+t0vTv41iO5/BhPfrpjcR5dN
+        7sM+0fNtSAi8c/RHEp6h2Lny+uoHDxsXZ8BvS56ZyzoLJbATjQgh6DXfgV6LC0RbEMyOEPdM9hBcsk7A
+        BdM4DAoBGBMiWW4ICIDH7RV/ntm8f10GUHrl2fHLTzfhxc77lrX2sgjXh70g3PCzvzsmRJ/bhOD58hnN
+        j1oAgzjBXnmlpXnn8MXhotkFj+a3+CGoB3Czt6nSwrxzBhfYxwB34YagB4Cl1QI7rDpnICF7XDUAxgWh
+        kwEw1QidDoCpQugGACwdaxKhWwCwphC6CQBrGKHbALCGELoRAKsboVsBsIdzm8d7LpTPlY8eAFZyr9nB
+        1d1Lrcke1ygA5htNAt5YPlc+egCot2YA8DZuAMloTgZwtfRl6NrwlOLCvBuZvA+GQY/ibrXiCpB7si8D
+        MA9MsVfFFU7Cg0yefZ75l4fp+GP2TfC2t75dj+MKgKWiG/iEFQC7MQx9oochtDqLPQqvCgeKe9WKOwC2
+        nfsEq6kirCzuVIrNZMHvS4PPu8y1ufkNSCTzkMm8hd033xX3Oa2WAHRSBEAABEAABEAATQA8y+7D9Gym
+        o8KdpXc0DbCU3gbREeiocGfpHaoBPhx8Ab0P7kgABEAABEAAWgHs/mhv0tEcYP2gvUlHcwC9DQEQAAFo
+        C/DrT3uTjuYASv+ZtUw6mgN8Pmpv0tEcQG9DAARAANoCbH1tb9IhAK0B9DYEQAAEQAAEoAZA6WdzTvss
+        e1JnMA7u6KKuwx3ZrqWdpXfgbacD1Pjh5E1reM8yGjjspHBnpVvwxvK5NDQ0PT3/AbZBThIymI41AAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAABppJREFUeF7t
         W11MHFUUpizV6IISDPAApPuXxtg3QU0fdGaBVnnRYoLaampcWts+tmla8AmNf0Xjg0nDzGKXyJ+KhmhJ
@@ -150,55 +184,6 @@
         x6hduWeCL1lh6sNCK4jP+A4rOcbIfvtRWZS3RoV3hw9HZgPeOxgN1Em6Y+4PS/PzSNqY0dh4cOylEMAW
         Nd39BAUySAFhec06UivhPL/TcT2FxYzY46lKYWbtAKM2VpuNE2fGP0xQchqwers6jsT78OHDhw8fawRF
         Rf8Dir4MqBG3Hq0AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnDeleteProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAlBJREFUeF7t
-        m11qwkAUhX3uakqhXUAlBiHBSFfkg4L64KpsK7Wty6hQbaVCH+1cmfMSDCbze8fOBxeKksk5X0ejEFuR
-        SCTShGWeX8k/2WE929P9/c0iSb5e0rQnH2IDZaJslFE+ZJZ5klwvs+xjOxgcVv3+RpzwQT7lnUWnk62K
-        YkPZXvN8/Zimd/IpM6D8bjg8/M5mh/10ykYCyu8nk2O23WhkVkK5PIaDhHJ5jDEJVeUxPiVUlcdoSzhX
-        HuNDwrnyGGUJdctjXEqoWx7TWAJdS5+T5JveUU8tWDU/ItB7UXwKCdYukbQ2nYPOdSpD1VAX6lT7c0JT
-        yxibO8F5Jk4SvGXhIMF7Bp0A4vW61QnAZhf6kMCmPHApgV154EIC2/LApgT25YENCcGUByYlBFcemJAQ
-        bHkgAih9Psd3B51j6dwyhl90JCiV7/W2y263kKfngepWbjJstn0VNiWwLw9sSAimPDApIbjywISEYMsD
-        HQnBlydEeKXLIw3by11dTL0EhMBa3yJZYfpNMCgJJstjgpFgozyGvQSb5TFsJYhAzr4M7cdjXlcHnfJ0
-        nMqxRwniODq3jOEH1W1PWxkfcnTWEBL8vRxMlJdLaa3lRYLJ8sDGmlawGZS9BBcB2UpwGYydBB+B2Ejw
-        GcS7BA7/BW8Z2GxBgfMsnMoDZ5nibXKCS7tR8i3L1vN2+1YuUY9LuVVWqTwI/WZprfKgSoLP8qBKAu4P
-        1i4PyhI4lAdlCcbLA0igd1Qu5QEkUDYr5cG//tEUsP7TNA04Z4tEIhxptf4AJEYR/dOqmE8AAAAASUVO
-        RK5CYII=
-</value>
-  </data>
-  <data name="btnEditProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAABoJJREFUeF7t
-        m3lsFFUcx2d2dufNckhMNAb+EP9SvIixpjOzLVBKOeQM0jZQ2trOTJezIFABUxKLVKnhkMMQ6kkKCIWq
-        HFFBjkYiUCkVUKMUSRCQO4UYMRHQPn9v9r3Z3XYoXfxnZjPf5Jumzez7/T6/nffeb45ynjx58uTJcarw
-        IUUfJSn6eknRfgFfkWT9JPy+JSgb2VxGhZ8emHwS1XAfAD0KxnczkvVjXVK1F+hHkkddQyXPAdwNC3TA
-        dBwoWI4Dk97DgcIVGGWUxhbiFlK0UvpR96tLSrgnQF0y4VQD+2dtxNym3zFXdzXq2kvYX1aLpbRJsYXY
-        zL1YiugwLhXMaUnVDzAooXxHPHgb+1Y3YTRkTrQIsraLy8kR6GjuEyx4yxhMoGStLXRb8xt+w2LuW9Ei
-        KEY5Hc5dCsraOABoJRBoYGn7074jb76A0chyVoQ/uJRwDzqsO4TStCdI4hTAtJi9CPPrTtsD29i39KD1
-        Wdgui+jQLlDfgq6Q9I9m4rDooezonEaZM7Bv2SFb4HbeesXcLSLjaNV0dOcLEl7HgP0rqzF39XscWLzK
-        KoK5E8yoAcDL9uAxRqMXRAqnalvp8M4W7PVTGag4uQJzLccxd+OEaeHTLVjKmGwVQhy/GPM1Z2zBmdHQ
-        Mnq8sYGGcK6Cqp4Kyf5NEkYjZ2L+TIMFz8yfqMco91WrCChrNvatOGILz39w0jxbyHHQJs+nYZyp7inh
-        hyDRsyZYvzD2Hd7VDt7ypaM4UL7EKoIUKsH+uXXmnI8tQMBYw45pRaklj9NQTlSFD5qd3QxIWFdjD97G
-        wicboVjRzk+cuNTsAQi8sLje+vZhWn1OAzlTcDW3kEEE5r1tC3s3+5r2YfRSzC4BXaBQuQdL/acx+BvB
-        9PCjNJTzBPtzFiT6j5lsdhnmLjTagnboi41QuCqrCDFuDaraWBrKeZJCem9IssVMFlZ3/od6e8BOmkwd
-        dtpHbLxJQzlQcJUG876RJStsg0XMBioRC+vXx8Drex19EUQ6M5asv+pdW6BE7Gv42tw96Jjnu/UrfpiG
-        cp5gv89j8GJRudnp2UF11vy57zAaM4vB3w4qehoN5TyJatGzkORfJFk0bDrmTx+0heq0oVMUpy1k8NDy
-        6tNpKAcqTeseuZEJyYYM7Nu30x4qAftXrLXgwZtoJEeKR4pex5L1V39kC5SIfbu3m4U0x5T1k6TANJbz
-        BPNyHoMXZyzC3PXoRc79mG/+Fpoeeqmr6H+KivEkDeU8SWrxAEjyDkkWjX4F82fbX+Qk5CtNWCx4jcFD
-        s6Pn0FDOU1fZeASSvGAmC327r3GPPVQCDry+nMGTRW8JDeVAkTu6sv4NS1ao3WQLlIiFuloLHsY+xKWE
-        AzSa8xR3R3fhO7ZAiZhv2gsXOdbV3+UuaVovGsp5EmVjDCQZuaObN9+ct3ZQnTV//ghGY2cz+DtkXaGh
-        HCh54gOQZOSObuYUzP98wBaq0ybNDuwcFB4HZb2MRnKmgrKWzpIlDrwBp///aHf9a96Pwqv6NgjBRyI5
-        VEg2hscWgJhsW/dzJvjqv4g2O4p+yhUPOIKqMYGBPz2m0CoCGjQVC19+ZgtqZ/4UNDtDrWbnphjSn6Eh
-        nC3Ymycx6HMNg3F55Thy6lqF6NSUuHYMi1rknr5pVSukwztf0PbOZYnf/CkTt/46EO+oHYF7Diq2gO41
-        JQKVK61jYbzVdGh3CJKuJIl3C2kmPPNZOBsG5OdbYGSHELa3vxMkbNsaPUbRG7inc0Q6tDtEvjGSfK+s
-        4rgCEN9uzuxwSvDH98c+/WmRlKLH6LDukaTqNQSgz6jCdgVgtp0S0OmhHOupz79ILRlKh3SXyF5NIFJz
-        823hmc8cHozT82KmRPwdXXe+1EAEAPsJRNbLE23BY334q2FxZwJxUNF2wjDObnY6ElKMJgIybsoEW2iy
-        M3z84WicFvvtM6t6Y4/0KQ/SodwpADlNYIrn5MaBNx8YYi6AZHGMg4b5Dqf8HvICJHzcvd88EwBdI2Az
-        F+TgO80D8c4tI/BwPS9u5Tet6hfhZ5Wjn93djwDqFgF8PrsA9x5WFA9NLpFVfbf5zC4pX2vNKJLaAJs2
-        3/JUtWpRLn6KHpmkUnOCAGw+7Y1YOyjJRj4pDD0i+RWU9fEAXyXKRl/6J0+ePHlKDkkhvT9Z4JLKwETx
-        7i3zf3Ri9vck8WWKd2/Rmx3kxabrSeKWoGKsoniePHny5CkijvsPHwvyLpZ/5OsAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
