--- a/Application/Code/DBMS_G15/DBMS_G15/DriverForm.resx
+++ b/Application/Code/DBMS_G15/DBMS_G15/DriverForm.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnDeleteProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAlBJREFUeF7t
         m11qwkAUhX3uakqhXUAlBiHBSFfkg4L64KpsK7Wty6hQbaVCH+1cmfMSDCbze8fOBxeKksk5X0ejEFuR
@@ -134,7 +134,7 @@
         RK5CYII=
 </value>
   </data>
-  <data name="btnSaveProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAsxJREFUeF7t
         2+1PUnEUwHH/gPo3y61iWXK9wJguSwdIBg4njwLZUgQd5IzKoUlhC9SssZXpux7cWq2HaVutnTi/IcN7
@@ -152,7 +152,7 @@
         AElFTkSuQmCC
 </value>
   </data>
-  <data name="btnAddProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAABppJREFUeF7t
         W11MHFUUpizV6IISDPAApPuXxtg3QU0fdGaBVnnRYoLaampcWts+tmla8AmNf0Xjg0nDzGKXyJ+KhmhJ
