--- a/Application/Code/DBMS_G15/DBMS_G15/OrderForm.resx
+++ b/Application/Code/DBMS_G15/DBMS_G15/OrderForm.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAlBJREFUeF7t
         m11qwkAUhX3uakqhXUAlBiHBSFfkg4L64KpsK7Wty6hQbaVCH+1cmfMSDCbze8fOBxeKksk5X0ejEFuR
@@ -134,22 +134,54 @@
         RK5CYII=
 </value>
   </data>
-  <data name="btnSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bttADD_CT.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAsxJREFUeF7t
-        2+1PUnEUwHH/gPo3y61iWXK9wJguSwdIBg4njwLZUgQd5IzKoUlhC9SssZXpux7cWq2HaVutnTi/IcN7
-        LwrcH5cLO2f7vmN4zgdw4wU9NDQ0lXEYI3cdQqRQT3Zj5KNdiBxKuzUQ+t0vTv41iO5/BhPfrpjcR5dN
-        7sM+0fNtSAi8c/RHEp6h2Lny+uoHDxsXZ8BvS56ZyzoLJbATjQgh6DXfgV6LC0RbEMyOEPdM9hBcsk7A
-        BdM4DAoBGBMiWW4ICIDH7RV/ntm8f10GUHrl2fHLTzfhxc77lrX2sgjXh70g3PCzvzsmRJ/bhOD58hnN
-        j1oAgzjBXnmlpXnn8MXhotkFj+a3+CGoB3Czt6nSwrxzBhfYxwB34YagB4Cl1QI7rDpnICF7XDUAxgWh
-        kwEw1QidDoCpQugGACwdaxKhWwCwphC6CQBrGKHbALCGELoRAKsboVsBsIdzm8d7LpTPlY8eAFZyr9nB
-        1d1Lrcke1ygA5htNAt5YPlc+egCot2YA8DZuAMloTgZwtfRl6NrwlOLCvBuZvA+GQY/ibrXiCpB7si8D
-        MA9MsVfFFU7Cg0yefZ75l4fp+GP2TfC2t75dj+MKgKWiG/iEFQC7MQx9oochtDqLPQqvCgeKe9WKOwC2
-        nfsEq6kirCzuVIrNZMHvS4PPu8y1ufkNSCTzkMm8hd033xX3Oa2WAHRSBEAABEAABEAATQA8y+7D9Gym
-        o8KdpXc0DbCU3gbREeiocGfpHaoBPhx8Ab0P7kgABEAABEAAWgHs/mhv0tEcYP2gvUlHcwC9DQEQAAFo
-        C/DrT3uTjuYASv+ZtUw6mgN8Pmpv0tEcQG9DAARAANoCbH1tb9IhAK0B9DYEQAAEQAAEoAZA6WdzTvss
-        e1JnMA7u6KKuwx3ZrqWdpXfgbacD1Pjh5E1reM8yGjjspHBnpVvwxvK5NDQ0PT3/AbZBThIymI41AAAA
-        AElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAABppJREFUeF7t
+        W11MHFUUpizV6IISDPAApPuXxtg3QU0fdGaBVnnRYoLaampcWts+tmla8AmNf0Xjg0nDzGKXyJ+KhmhJ
+        QWxrY9vYiFTBGF9aqa2tDz6bNKGa6/nu3Blm6WXZmd3ZApkv+ZLNMnvOd87M3HvOvZciHz58+PDhw0fB
+        EGv58O5Yk/ZQKK4/FlGTzSA+47tNbSN3icvWDqJPHK0Lq/quiKIPRVT9MvFfIluC+Btdow2GVa09pvbW
+        CjOrC/X1+nq6sy9GFO00Bf7foiCzp/HbU5G4vkNVu0qE+RWMtpFAVNX3kOgraYGA8SSrafuMVe6bYOWd
+        59l9r//Agu/+zInP5R3n+d9wDa697feqPhdWkrvhQ3hbWQg39jxKd+yiXXS4qZdVt4+x4JFZVjx8gxV9
+        8XdWxLXB7hlWnRjjNuw2idP0ijQItysBbB2J6iDeMkWGtqRYxcEzLDDwpzRAJ4SNigNnWGjrMXsSbkXj
+        +iH4FiLuDGo3f3BPVNG/soTFdVa1d5wF+nMPfDED/ddY1avj3MdCIrRRaBByCouQ2ldOIs6ZYjY81cfu
+        ff8Xqfh8MvjeLAs92WdPwtlIs36/kFUYIOv24GtbP2ElfVelgr1gSeoPVtc6nJaEAj4JXcX2x77muc9Z
+        8dB1qVAvGRi8Tr5H7EkYLciYEFGSnaZT3HmnwWNQK3tzmk99duI7p4MmklD37MKTEFaTB4VMb8CnOjHa
+        451389jjiTEFL2bN8yPS32QiXgfbmDAfjffWC7l5BhUg1jxPI7HbAW9Di30ASyf+JvvNcgx2z9rtTOE1
+        FarzB1HhcSeY6mRCsqGZgJZdo2xw/DInPuM7twkA+RQp9KGPELLzA6O2N8pbFDm5zPNmArbvP8F+vfoP
+        Jz7ju1wSEPj4GmkziqWwov+e196BNzZkGESFJxOQLb1KAFhx4Ftuh5MaKCE/d/CujoyiLs+1vPUyAXgy
+        w41W73BSyM8N6OfNlhaNjcyxE3qZALC6/biRANK8sbGnRoThHnwxw8go7+pkTp3Q6wSgvTb1UludEGG4
+        BxkZFsao6Mm+pV2KXicAGm3rCQMiDPcgI1jG4mWnzKFTep0AkC+qGAm4JMJwByxgkhG+hofVGpkzEIMP
+        qjhUZMvRbGdlCcDfZL9ZTFSTmQZj1CncHmlHDCIc5wip+oPCEF+ykjkDS9++aDrMmi93fG0lAJ9l12Qi
+        fMq0gOUd5xaubUpuFOE4R0zRNpuGyt6YkjoDy96athw+vfdLtvPQREYmXvuGTVz4y0rAxIUbLNE5Kb3W
+        Tti29JBPmRYQzZV5HfoXEY5zhBVti2mo9J2fpM5AewI+nZyzAss3Ydv0kykB6U9kslmE4xxrIgFxrUmE
+        4xyevQL0uOOxNwMb/967VyCiJB8R4ThHoQbBnYe9GwSj6kcxEY5zYK+OjCw/DdKUVNBpkHwFBpZeibJN
+        g/PoZEU47kBGLsEYiguZM6csZCEUVfXfRBjuQU0FNjXp7qzCUjiup0QY7pHWDHXPSJ06odcJsDdDYVV7
+        SYThHtiittrhxCpohxOiHcYC6daeKhFGbiBjp2CUL4jkuO3lZQKwfbawIKKNCfm5g96lHYZRnW9Uypxn
+        Sy8T8MD+0yJ4GgCVZKuQnzuwwEhG52AYu7TItExANvQqAfZFUWP0z/PSOA4nwDiIJWiZiGxoJiDvy+K7
+        jSRyKtp2ITuPwMaIqv/IHVDBgl1amZDlaCZARrcJwOxk2VH07zzbI6SBpYGczMMRKjJsS8kEZWLGrbEX
+        nK86rT92hbSkTBs3Y/HkJiHXG1ASDpuC654ZdL6hSSUsGhn7xiiI7zKVtzLyzdFttm1yRd8nZHoJHInR
+        Rk2nWCuEEJlAL4lk2db+WDSu9wuB3sM4IKGdNZ3jsIKb18Et8djXbRuygqc7P1nwQ5Y4lmJPAsYE7NLK
+        BOeTGPBs77wRvHq0VMgqLMSTYL0OIKZIzMky8bkQNtOmOiIe+xVwvJatw8kMEsRnBxAFCTYq83FaDEUX
+        KjyzyBG8WaABL3vEGvWHSdiUTSSvy9GcBI/MODpKg2vR1VW/cty+2WmQ5nnPpzr36CrG4QTsz6eJBqlH
+        x6hduWeCL1lh6sNCK4jP+A4rOcbIfvtRWZS3RoV3hw9HZgPeOxgN1Em6Y+4PS/PzSNqY0dh4cOylEMAW
+        Nd39BAUySAFhec06UivhPL/TcT2FxYzY46lKYWbtAKM2VpuNE2fGP0xQchqwers6jsT78OHDhw8fawRF
+        Rf8Dir4MqBG3Hq0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAlBJREFUeF7t
+        m11qwkAUhX3uakqhXUAlBiHBSFfkg4L64KpsK7Wty6hQbaVCH+1cmfMSDCbze8fOBxeKksk5X0ejEFuR
+        SCTShGWeX8k/2WE929P9/c0iSb5e0rQnH2IDZaJslFE+ZJZ5klwvs+xjOxgcVv3+RpzwQT7lnUWnk62K
+        YkPZXvN8/Zimd/IpM6D8bjg8/M5mh/10ykYCyu8nk2O23WhkVkK5PIaDhHJ5jDEJVeUxPiVUlcdoSzhX
+        HuNDwrnyGGUJdctjXEqoWx7TWAJdS5+T5JveUU8tWDU/ItB7UXwKCdYukbQ2nYPOdSpD1VAX6lT7c0JT
+        yxibO8F5Jk4SvGXhIMF7Bp0A4vW61QnAZhf6kMCmPHApgV154EIC2/LApgT25YENCcGUByYlBFcemJAQ
+        bHkgAih9Psd3B51j6dwyhl90JCiV7/W2y263kKfngepWbjJstn0VNiWwLw9sSAimPDApIbjywISEYMsD
+        HQnBlydEeKXLIw3by11dTL0EhMBa3yJZYfpNMCgJJstjgpFgozyGvQSb5TFsJYhAzr4M7cdjXlcHnfJ0
+        nMqxRwniODq3jOEH1W1PWxkfcnTWEBL8vRxMlJdLaa3lRYLJ8sDGmlawGZS9BBcB2UpwGYydBB+B2Ejw
+        GcS7BA7/BW8Z2GxBgfMsnMoDZ5nibXKCS7tR8i3L1vN2+1YuUY9LuVVWqTwI/WZprfKgSoLP8qBKAu4P
+        1i4PyhI4lAdlCcbLA0igd1Qu5QEkUDYr5cG//tEUsP7TNA04Z4tEIhxptf4AJEYR/dOqmE8AAAAASUVO
+        RK5CYII=
 </value>
   </data>
   <data name="btnAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
